# asupersync

./: .gitignore  .stub-allowlist.txt  Cargo.toml  README.md  TESTING.md  asupersync_web_demo.html  audit_index.jsonl  package.json
.beads/: .migration-hint-ts
.github/: ci_matrix_policy.json  security_release_policy.json  wasm_abi_policy.json  wasm_typescript_package_policy.json  wasm_typescript_type_model_policy.json  wasm_worker_offload_policy.json
artifacts/: adversarial_regime_shift_v1.json  crash_only_region_semantics_v1.json  failure_domain_compiler_v1.json  raptorq_expected_loss_decision_contract_v1.json  raptorq_program_closure_signoff_packet_v1.json  raptorq_track_e_gf256_bench_v1.json  raptorq_track_e_gf256_multiscenario_refresh_v3.json  raptorq_track_e_gf256_p95p99_highconf_v1.json  raptorq_track_f_wavefront_pipeline_v1.json  replay_minimization_validation_contract_v1.json  transport_frontier_benchmark_v1.json  wasm_bundle_size_budget_v1.json  wasm_qa_evidence_matrix_v1.json
asupersync-browser-core/: Cargo.toml
asupersync-macros/: Cargo.toml
asupersync-tokio-compat/: Cargo.toml
asupersync-wasm/: Cargo.toml
benches/: cancel_trace_bench.rs  fabric_bench.rs  golden_output.rs  methodology_baselines.rs  phase0_baseline.rs  protocol_benchmark.rs  raptorq_benchmark.rs  scheduler_benchmark.rs  scheduler_browser_bench.rs  tracing_overhead.rs
conformance/: Cargo.toml
docs/: WASM.md  asupersync_v4_formal_semantics.md  integration.md  (+68 more)
tests/fixtures/rust-browser-consumer/crate/: Cargo.toml
tests/fixtures/rust-browser-consumer/crate/src/: lib.rs
(+540 files in other folders)
